Fri Dec 11 09:30:29 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/PSLSampleLost/descriptors/run_test.pl:
        * examples/Hello/descriptors/run_test.pl:
        * examples/Null_Component/descriptors/run_test.pl:
          Resolved script errors.

Fri Dec 11 08:20:57 UTC 2009  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/dds4ccm/tests/Updater/Sender/Updater_Sender_exec.cpp
          Resolved warnings.

Fri Dec 11 08:09:25 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * performance-tests/Protocols/descriptors/run_test.pl:
          Resolved fuzz errors/warnings.

Fri Dec 11 07:44:10 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * examples/Display/descriptors/run_NodeDaemons.pl:
        * examples/Hello/descriptors/run_NodeDaemons.pl:
          Resolved fuzz errors/warnings.

Thu Dec 10 20:23:15 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/tests/CIAO/CommandlinePassage/run_test.pl:
        * connectors/ami4ccm/examples/Hello/descriptors/run_test.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_test.pl:
        * connectors/dds4ccm/examples/Quoter/descriptors/run_test.pl:
        * connectors/dds4ccm/examples/Shapes/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CSLDeadline/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CSLQoS/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CSLSampleRejected/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CSLUnexpStat/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/Event_Connection_Test/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/Getter/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/KeyedSamples/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/KeyedWriter/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/ListenNotEnabled/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/ListenOneByOne/descriptors/run_test.pl: